<resources>
    <string name="app_name">constraintLayout</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="app_logo">app logo</string>
    <string name="client_id">Add API Key</string>
<!--    1030773854017-k9vc0543al47dt50likshfoe7q25cvnv.apps.googleusercontent.com-->
</resources>
